--- a/source/styles/compiler.css
+++ b/source/styles/compiler.css
@@ -1,19 +1,20 @@
 /* compiler.css */
-/*
+
 body
 {
-	background-color: #909193;
-	background-image: url(images/background.jpg);
-	background-repeat: repeat-x;
+	background-color: #303030
+	/*background-image: url(images/background.jpg);
+	background-repeat: repeat-x;*/
 	font-family: Helvetica, Verdana, Arial, sans-serif;
 	font-size: 10pt;
 	font-weight: normal;
 	font-style: normal;
+	font-color: #009900;
 }
 
 h1 
 { 
-    color: black;
+    color: #009900;
 	font-size:   20pt;
 	font-weight: normal;
 	font-style: normal;	
@@ -22,12 +23,13 @@ h1
 
 h2
 {
-	font-family: Helvetica, Verdana, Arial, sans-serif;
+	color: #009900;	
+font-family: Helvetica, Verdana, Arial, sans-serif;
 	font-size:   16pt;
 	font-weight: normal;
 	font-style: normal;	
 }
-*/
+
 h1{
 	font-weight: bold;
 	text-align: center;
